bad/assign_self_void.example_compiler_output
ERROR
[1mbad/assign_self_void.lat:6:7: [1;31merror: [0;1mleft side is not assignable[m
	self = vfunc();
	     [1;32m^[m
[1mbad/assign_self_void.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	self = vfunc();
	[1;32m^[m
